--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
     "next": "14.2.7",
     "phosphor-react": "^1.4.1",
     "react": "^18",
