--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
     "next": "14.2.7",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cookies": "^0.9.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "prisma": "^5.19.1",
